--- a/.github/workflows/vultr.yml
+++ b/.github/workflows/vultr.yml
@@ -43,10 +43,10 @@ jobs:
       - name: Deploy to Server
         uses: AEnterprise/rsync-deploy@v1.0 # 使用别人包装好的步骤镜像
         env:
-          DEPLOY_KEY: ${{ VULTR_RSA }} # 引用配置，SSH私钥
+          DEPLOY_KEY: ${{ secrets.VULTR_RSA }} # 引用配置，SSH私钥
           # ARGS: -avz --delete --exclude='*.pyc' # rsync参数，排除.pyc文件
           SERVER_PORT: "22" # SSH端口
           FOLDER: ./dist # 要推送的文件夹，路径相对于代码仓库的根目录
-          SERVER_IP: ${{ 45.77.76.85 }} # 引用配置，服务器的host名（IP或者域名domain.com）
-          USERNAME: ${{ freeman }} # 引用配置，服务器登录名
+          SERVER_IP: ${{ secrets.45.77.76.85 }} # 引用配置，服务器的host名（IP或者域名domain.com）
+          USERNAME: ${{ secrets.freeman }} # 引用配置，服务器登录名
           SERVER_DESTINATION: /home/githubactions/ # 部署到目标文件夹
