--- a/.github/workflows/vultr.yml
+++ b/.github/workflows/vultr.yml
@@ -42,8 +42,8 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run npm
         run: |
-          npm install,
-          npm run build.
+          npm install
+          npm run build
           
       - name: Deploy to Server
         uses: AEnterprise/rsync-deploy@v1.0 # 使用别人包装好的步骤镜像
