--- a/.github/workflows/vultr.yml
+++ b/.github/workflows/vultr.yml
@@ -52,6 +52,6 @@ jobs:
           ARGS: -avz --delete --exclude='*.pyc' # rsync参数，排除.pyc文件
           SERVER_PORT: "22" # SSH端口
           FOLDER: ./dist # 要推送的文件夹，路径相对于代码仓库的根目录
-          SERVER_IP: ${{ secrets.vultr.guest }} # 引用配置，服务器的host名（IP或者域名domain.com）
-          USERNAME: ${{ secrets.freeman }} # 引用配置，服务器登录名
+          SERVER_IP: ${{ secrets.VULTR_HOST }} # 引用配置，服务器的host名（IP或者域名domain.com）
+          USERNAME: ${{ secrets.VULTR_USERNAME }} # 引用配置，服务器登录名
           SERVER_DESTINATION: /home/githubactions/ # 部署到目标文件夹
