--- a/.github/workflows/vultr.yml
+++ b/.github/workflows/vultr.yml
@@ -49,9 +49,9 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.VULTR_HOST }}
-          proxy_port: ${{ secrets.VULTR_PORT }}
+          port: ${{ secrets.VULTR_PORT }}
           username: ${{ secrets.VULTR_USERNAME }}
-          proxy_key: ${{ secrets.VULTR_RSA }}
+          key: ${{ secrets.VULTR_RSA }}
           script: bash /home/del.sh
     
       - name: Deploy to Server
