--- a/.github/workflows/vultr.yml
+++ b/.github/workflows/vultr.yml
@@ -55,15 +55,13 @@ jobs:
           script: bash /home/del.sh
     
       - name: Deploy to Server
-        uses: AEnterprise/rsync-deploy@v1.0 # 使用别人包装好的步骤镜像
+        uses: AEnterprise/rsync-deploy@v1.0
         env:
-          DEPLOY_KEY: ${{ secrets.VULTR_RSA }} # 引用配置，SSH私钥
-          ARGS: -avz --delete --exclude='*.pyc' # rsync参数，排除.pyc文件
-          SERVER_PORT: "22" # SSH端口
-          FOLDER: ./dist # 要推送的文件夹，路径相对于代码仓库的根目录
-          SERVER_IP: ${{ secrets.VULTR_HOST }} # 引用配置，服务器的host名（IP或者域名domain.com）
-          USERNAME: ${{ secrets.VULTR_USERNAME }} # 引用配置，服务器登录名
-          SERVER_DESTINATION: /home/githubactions/ # 部署到目标文件夹
+           DEPLOY_KEY: ${{ secrets.VULTR_RSA }}
+           ARGS: -avz --delete --exclude='*.pyc' # rsync参数，排除.pyc文件
+           SERVER_PORT: "22" # SSH端口
+           FOLDER: ./dist # 要推送的文件夹，路径相对于代码仓库的根目录
+           SERVER_IP: ${{ secrets.VULTR_HOST }} # 引用配置，服务器的host名（IP或者域名domain.com）
           
           
           
